--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,8 @@
 
 <!-- start custom head snippets -->
 
+<meta name="google-site-verification" content="VaWknkbGKlRGVswAfFD-XAuYli1XEaTMYE-F9LhovHY" />
+
 <!-- Support for Academicons -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
